<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Liquids.LiquidActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/liquid_bckgrnd_level"
    android:id="@+id/ll_liquid">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_liquid_title"
        android:text="@string/liquidTitle"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/DarkButton"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_liquid_plc"
            android:layout_marginRight="25dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/DarkButton"
            android:text="@string/PLC"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tb_liquid_connexion"
            android:background="@color/DarkButton"
            android:textColor="@color/White"
            android:textSize="25dp"
            android:checked="true"
            android:textOn="@string/ButtonON"
            android:textOff="@string/ButtonOFF"
            android:layout_marginRight="5dp"
            android:onClick="onLiquidClickManager"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_liquid_mode"
            android:layout_marginRight="25dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/DarkButton"
            android:text="@string/liquidMode"/>
    </LinearLayout>
    <!--
    <com.jjoe64.graphview.helper.GraphViewXML
        android:layout_width="match_parent"
        android:layout_height="400dip"
        app:seriesData="0=5;2=5;3=0;4=2"
        app:seriesType="line"
        app:seriesColor="#ee0000"
        android:id="@+id/gv_liquid_lvl"/>
        -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/DarkButton"
        android:text="@string/liquidLevel"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_liquid_lvl"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/DarkButton"
        android:text="@string/liquidInitValue"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_liquid_v1"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/DarkButton"
        android:text="@string/liquidV1"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_liquid_v2"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/DarkButton"
            android:text="@string/liquidV2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_liquid_v3"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/DarkButton"
            android:text="@string/liquidV3"
            android:layout_marginHorizontal="35dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_liquid_v4"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/DarkButton"
            android:text="@string/liquidV4"/>
    </LinearLayout>
        <include layout="@layout/write_automaton"/>

    <ImageButton
        android:id="@+id/btn_liquids_help"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="-130dp"
        android:background="@drawable/liquid_bckgrnd_level"
        android:onClick="onLiquidClickManager"
        android:src="@drawable/help_icon" />
</LinearLayout>