<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pills.PillsActivity"
    android:gravity="center"
    android:orientation="vertical">
    <!--
    <com.jjoe64.graphview.helper.GraphViewXML
        android:layout_width="match_parent"
        android:layout_height="400dip"
        app:seriesData="0=5;2=5;3=0;4=2"
        app:seriesType="line"
        app:seriesColor="#ee0000"
        android:id="@+id/graph1"/>
    -->
    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_pill_title"
        android:text="@string/pillTitle"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/DarkButton"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pills_plc"
            android:layout_marginRight="25dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/DarkButton"
            android:text="@string/PLC"/>
        <ImageButton
            android:id="@+id/btn_pills_connexion"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circular_button"
            android:src="@drawable/power_button"
            android:onClick="onPillsClickManager"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pills_status"
            android:layout_marginLeft="15dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/RED"
            android:text="@string/ButtonOFF"/>
    </LinearLayout>
    <View
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pills_bottles_coming"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/pillBottlesAreComing"/>
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_pills_pills_asked"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/pillAskedPills"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pills_stored_pills"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/pillStoredPills"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_pills_stored_bottles"
            android:layout_marginLeft="20dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/pillStoredBottles"/>

    </LinearLayout>

        <include layout="@layout/write_automaton"/>
    <ImageButton
        android:id="@+id/btn_pills_help"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="-130dp"
        android:background="@drawable/liquid_bckgrnd_level"
        android:onClick="onPillsClickManager"
        android:src="@drawable/help_icon" />
</LinearLayout>