<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:gravity="center"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@drawable/background4">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appTitle"
            android:textSize="32dp"
            android:textColor="@color/DarkGrey"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonConnexion"
                android:id="@+id/btn_GoToLogin"
                android:onClick="onMainClickManager"
                android:background="@color/DarkButton"
                android:textColor="@color/White"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/btn_GoToRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onMainClickManager"
                android:background="@color/DarkButton"
                android:textColor="@color/White"
                android:text="@string/buttonInscription" />

        </LinearLayout>


    </LinearLayout>








</LinearLayout>